Fix Mobile About Page spacing

--- a/client/src/pages/AboutPage/index.scss
+++ b/client/src/pages/AboutPage/index.scss
@@ -2,13 +2,13 @@
   font-size: 5em;
   font-weight: bold;
   color: black;
-  padding: 20px;
+  padding: 5%;
 }
 
 .about-us-text {
-  font-size: 30px;
-  padding-left: 300px;
-  padding-right: 300px;
+  font-size: 2em;
+  padding-left: 25%;
+  padding-right: 25%;
 }
 
 .about-us-body {
@@ -22,8 +22,8 @@
 .about-us-body-parts {
   padding-top: 25px;
   color: black;
-  padding-left: 350px;
-  padding-right: 350px;
+  padding-left: 30%;
+  padding-right: 30%;
 }
 
 .about-us-body-top {
